2005-12-30 Braden McDaniel  <braden@endoframe.com>

	* tests/test_browser.cpp
	(test_browser::do_get_resource(const std::string &): Changed
	file_resource_istream to override the private virtual functions of
	openvrml::resource_istream.	

2005-12-20 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(grouping_node_base<Derived>): Change self_t back to a typedef;
	rather than "using" the typedef from
	openvrml::node_impl_util::abstract_node<Derived>.  gcc didn't
	identify self_t as a type when importing it with "using".

2005-12-20 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(grouping_node_base<Derived>): Made self_t protected.

2005-12-20 Braden McDaniel  <braden@endoframe.com>

	Changed openvrml::resource_istream to use nonvirtual interface
	idiom.

	* examples/sdl_viewer.cpp
	(browser::do_get_resource(const std::string &)): Changed
	file_resource_istream to override the private virtual functions of
	openvrml::resource_istream.
	* mozilla-plugin/src/openvrml-player/player.cpp
	(browser::do_get_resource(const std::string &)): Changed
	plugin_resource_istream to override the private virtual functions
	of openvrml::resource_istream.
	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::resource_istream::url() const): Changed to delegate to
	openvrml::resource_istream::do_url.
	(openvrml::resource_istream::type() const): Changed to delegate to
	openvrml::resource_istream::do_type.
	(openvrml::resource_istream::data_available() const): Changed to
	delegate to openvrml::resource_istream::do_data_available.
	* src/libopenvrml/openvrml/browser.h
	(openvrml::resource_istream): Changed url, type, and
	data_available functions to be nonvirtual; these now delegate to
	private virtual functions do_url, do_type, and do_data_available,
	respectively.

2005-12-19 Braden McDaniel  <braden@endoframe.com>

	Added additional fields to node implementations to support X3D