@@ -1,5 +1,13 @@
 2005-12-30 Braden McDaniel  <braden@endoframe.com>
 
+	Added node_class_id test.
+
+	* tests/Makefile.am: Added node_class_id test.
+	* tests/node_class_id.cpp: Added file; test suite for
+	openvrml::node_class_id.
+
+2005-12-30 Braden McDaniel  <braden@endoframe.com>
+
 	* tests/test_browser.cpp
 	(test_browser::do_get_resource(const std::string &): Changed
 	file_resource_istream to override the private virtual functions of
